; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_pm.c_BTM_PM_ReadControllerState.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/btm/extr_btm_pm.c_BTM_PM_ReadControllerState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i64 0, align 8
@BTM_CONTRL_ACTIVE = common dso_local global i32 0, align 4
@BTM_CONTRL_SCAN = common dso_local global i32 0, align 4
@BTM_CONTRL_IDLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @BTM_PM_ReadControllerState() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @TRUE, align 8
  %3 = call i64 (...) @btm_pm_device_in_active_or_sniff_mode()
  %4 = icmp eq i64 %2, %3
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = load i32, i32* @BTM_CONTRL_ACTIVE, align 4
  store i32 %6, i32* %1, align 4
  br label %15

7:                                                ; preds = %0
  %8 = load i64, i64* @TRUE, align 8
  %9 = call i64 (...) @btm_pm_device_in_scan_state()
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = load i32, i32* @BTM_CONTRL_SCAN, align 4
  store i32 %12, i32* %1, align 4
  br label %15

13:                                               ; preds = %7
  %14 = load i32, i32* @BTM_CONTRL_IDLE, align 4
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %13, %11, %5
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}

declare dso_local i64 @btm_pm_device_in_active_or_sniff_mode(...) #1

declare dso_local i64 @btm_pm_device_in_scan_state(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
